# rust-capstone

./: .gitignore  Cargo.toml  README.md  build.sh  diesel.toml
database/: Cargo.toml
database/migrations/2024-01-05-183404_users/: up.sql
database/migrations/2024-01-14-010908_locations/: down.sql  up.sql
database/migrations/2024-01-15-004057_businesses/: down.sql  up.sql
database/migrations/2024-01-16-202055_users_locations/: down.sql  up.sql
database/migrations/2024-01-17-172654_reviews/: up.sql
database/migrations/2024-01-17-230414_images/: up.sql
database/src/: lib.rs  schema.rs
database/src/actions/: business.rs  image.rs  location.rs  mod.rs  review.rs  user.rs
database/src/models/: business.rs  image.rs  location.rs  locations.rs  mod.rs  review.rs  user.rs  users_locations.rs
frontend/: .env.example  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  base.scss  index.js  index.scss
frontend/src/components/BusinessFeed/: BusinessFeed.scss  index.js
frontend/src/components/BusinessForm/: BusinessForm.scss  index.js
frontend/src/components/BusinessPage/: BusinessPage.scss  index.js
frontend/src/components/CategoryCard/: CategoryCard.scss  index.js
frontend/src/components/Footer/: Footer.scss  index.js
frontend/src/components/LandingPage/: LandingPage.scss  index.js
frontend/src/context/: Modal.js  Modal.scss
frontend/src/store/: business.js  images.js  index.js  locations.js  reviews.js  session.js
server/: Cargo.toml
server/src/: main.rs
server/src/routes/: auth.rs  business.rs  image.rs  location.rs  mod.rs  review.rs  user.rs  users.rs
(+44 files in other folders)
