[package]
    name    = "database"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    bigdecimal    = { version = "0.4.2", features = ["serde"] }
    dotenvy       = "0.15.7"
    password-auth = "1.0.0"
    serde         = { version = "1.0.194", features = ["derive"] }
    serde_json    = "1.0.111"

    [dependencies.diesel]
        version  = "2.1.4"
        features = ["postgres", "extras", "r2d2", "numeric"]
