[package]
    name    = "server"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    actix       = "0.13.1"
    actix-files = "0.6.5"
    actix-web   = "4.4.1"
    database    = { path = "../database" }
    dotenvy     = "0.15.7"
    env_logger  = "0.10.1"
    log         = "0.4.20"
    serde       = { version = "1.0.195", features = ["derive"] }
    serde_json  = "1.0.111"
